feat: modify group logic