@@ -3,15 +3,16 @@ package kr.co.ifit.api.service;
 import kr.co.ifit.api.request.LikedGroupDtoReq;
 import kr.co.ifit.api.response.GroupDtoRes;
 import kr.co.ifit.db.entity.Group;
-import kr.co.ifit.db.entity.User;
 import kr.co.ifit.db.repository.GroupRepository;
 import kr.co.ifit.db.repository.JoinedGroupRepository;
+import kr.co.ifit.db.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor(onConstructor_ = {@Autowired})
@@ -24,25 +25,26 @@ public class CreatedGroupService {
 
     //  GroupRepository에서 userId로 조회 후 GroupresponseDTO로 변환 후 groups 리스트 응답
     public List<GroupDtoRes> getCreatedGroupsByUserId(Long userId) {
-        User user = userRepository.findById(userId).orElseThrow(()-> new RuntimeException("사용자를 찾을 수 없습니다."));
-        List<Group> groups = groupRepository.findByUser(user);
+        User user = userRepository.findById(userId).orElse(null);
+        List<Group> createdGroups = groupRepository.findByUser(user);
+        return createdGroups.stream().map(GroupDtoRes::convertToDto).collect(Collectors.toList());
+    }
 
-        return groups.stream()
-                .map(group -> new GroupDtoRes(
-                        group.getCommunityId(),
-                        group.getTitle(),
-                        group.getTopboxContent(),
-                        group.getSport(),
-                        group.getLocation(),
-                        group.getPerson(),
-                        group.getPeopleParticipation(),
-                        group.getDate()
-                )).toList();
+    //  내가 만든 모임에서 정렬 번호에 대한 모임 리스트 반환
+    public List<GroupDtoRes> getCreatedGroupsSorted(Long userId, int value) {
+        List<Group> createdGroups = groupRepository.findByIdSorted(userId, value);
+        return createdGroups.stream().map(GroupDtoRes::convertToDto).collect(Collectors.toList());
+    }
+
+    // 내가 만든 모임에서 검색 단어에 해당하는 모임 리스트 반환
+    public List<GroupDtoRes> getCreatedGroupsSearch(Long userId, String searchTerm) {
+        List<Group> createdGroups = groupRepository.findByUserIdAndAnyFieldContaining(userId, searchTerm);
+        return createdGroups.stream().map(GroupDtoRes::convertToDto).collect(Collectors.toList());
     }
 
     @Transactional
     //  내가 만든 모임에서 모임 삭제를 눌렀을 때 찾아서 없앤다
-    public boolean deleteGroup(Long userId, Long communityId) {
+    public boolean deleteCreatedGroup(Long userId, Long communityId) {
         User user = userRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
         List<Group> groups = groupRepository.findByUser(user);
 
@@ -54,8 +56,8 @@ public class CreatedGroupService {
         return false;
     }
 
-    public void toggleLike(LikedGroupDtoReq likedGroupDtoReq) {
-        if (likedGroupDtoReq.isHeartFilled()) {
+    public void createdGroupToggleLike(LikedGroupDtoReq likedGroupDtoReq) {
+        if (likedGroupDtoReq.isSaved()) {
             likedGroupService.toggleLike(likedGroupDtoReq);
         } else {
             likedGroupService.removeLike(likedGroupDtoReq);
